nash: kang taimen haptics driver
Change-Id: I34dcb032ec235b773b5d6062884408174c9aa096
Signed-off-by: Erfan Abdi <erfangplus@gmail.com>

--- a/arch/arm64/configs/lineageos_nash_defconfig
+++ b/arch/arm64/configs/lineageos_nash_defconfig
@@ -1332,7 +1332,6 @@ CONFIG_HDCP_QSEECOM=y
 CONFIG_UID_SYS_STATS=y
 CONFIG_QPNP_MISC=y
 # CONFIG_MEMORY_STATE_TIME is not set
-CONFIG_HAPTIC_DRV2624=y
 # CONFIG_HAPTIC_DRV2625 is not set
 CONFIG_ALSA_TO_H2W=y
 CONFIG_USB3813=y
@@ -2060,6 +2059,7 @@ CONFIG_INPUT_GPIO=y
 # CONFIG_INPUT_CMA3000 is not set
 # CONFIG_INPUT_SOC_BUTTON_ARRAY is not set
 # CONFIG_INPUT_DRV260X_HAPTICS is not set
+CONFIG_INPUT_DRV2624_HAPTICS=y
 # CONFIG_INPUT_DRV2665_HAPTICS is not set
 # CONFIG_INPUT_SX9310 is not set
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
