ARM: dts: qcom: Pimp out notification LED
* Add blink support
* Parameters kanged from mata

Change-Id: I678248013134806ae358f6d725999015d016a406

--- a/arch/arm/boot/dts/qcom/sdm630-payton.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm630-payton.dtsi
@@ -128,7 +128,15 @@
 };
 
 &red_led {
-	linux,name = "charging";
+	linux,name = "white";
+	qcom,start-idx = <1>;
+	qcom,idx-len = <10>;
+	qcom,duty-pcts = [00 19 32 4B 64 64 4B 32 19 00];
+	qcom,lut-flags = <19>;
+	qcom,pause-lo = <5000>;
+	qcom,pause-hi = <0>;
+	qcom,ramp-step-ms = <128>;
+	qcom,use-blink;
 	/delete-property/ linux,default-trigger;
 };
 
